--- a/src/app/shared/circle-live-session/circle-live-session.component.css
+++ b/src/app/shared/circle-live-session/circle-live-session.component.css
@@ -1,9 +1,9 @@
 .app-wrapper {
-  position: fixed;   /* lock to viewport */
+  position: fixed; /* lock to viewport */
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;     /* full viewport height */
+  height: 100vh; /* full viewport height */
   overflow: hidden;
 }
 
@@ -26,26 +26,23 @@
 .toolbar {
   flex-shrink: 0; /* stay fixed height */
   z-index: 10;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-left: 10px;
-    position: absolute;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  left: 10px;
+  position: absolute;
   top: 10px;
   z-index: 20;
 }
-
-
 
 ::ng-deep .custom-bottom-sheet {
   width: 1500px !important;
   max-width: 100% !important;
 }
 
-
- ::ng-deep .custom-bottom-sheet .mat-bottom-sheet-container{
-
+::ng-deep .custom-bottom-sheet .mat-bottom-sheet-container {
   padding: 0 !important;
-  margin: 0  !important; /* center horizontally */
+  margin: 0 !important; /* center horizontally */
   max-width: 100% !important;
-  width: 100% !important;   /* or 100% if you want full width */
+  width: 100% !important; /* or 100% if you want full width */
   height: 400px !important; /* set a fixed height */
-  box-sizing: border-box;   /* include padding/border in size */}
+  box-sizing: border-box; /* include padding/border in size */
+}
