--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,10 @@
 @import "tailwindcss";
+
+@source "../src/**/*.html";
+@source "../src/**/*.ts";
+@source "../src/**/*.component.ts";
+
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
