--- a/src/app/features/teacher/teacher-dashboard/components/add-wajib-dialog/add-wajib-dialog.component.html
+++ b/src/app/features/teacher/teacher-dashboard/components/add-wajib-dialog/add-wajib-dialog.component.html
@@ -1,20 +1,21 @@
 <h2 mat-dialog-title>إضافة واجب جديد</h2>
 
 <mat-dialog-content>
-  <form [formGroup]="form" (ngSubmit)="submit()" class="space-y-4 p-2" >
-    
-
-<mat-form-field class="w-full">
-  <mat-label>التاريخ</mat-label>
-  <input matInput [matDatepicker]="picker" formControlName="due_date" required>
-  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-  <mat-datepicker #picker></mat-datepicker>
-
-</mat-form-field>
-
-
-
-
+  <form [formGroup]="form" (ngSubmit)="submit()" class="space-y-4 p-2">
+    <mat-form-field class="w-full">
+      <mat-label>التاريخ</mat-label>
+      <input
+        matInput
+        [matDatepicker]="picker"
+        formControlName="due_date"
+        required
+      />
+      <mat-datepicker-toggle
+        matIconSuffix
+        [for]="picker"
+      ></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
 
     <mat-form-field class="w-full">
       <mat-label>السورة</mat-label>
@@ -30,7 +31,6 @@
         }
       </mat-autocomplete>
     </mat-form-field>
-
 
     <div class="flex gap-4">
       <mat-form-field class="flex-1">
@@ -55,9 +55,12 @@
       </mat-form-field>
     </div>
 
+        <mat-checkbox formControlName="isRev">مراجعة .</mat-checkbox>
+
     <div class="flex justify-end gap-2 mt-4"></div>
   </form>
 </mat-dialog-content>
+
 <mat-dialog-actions>
   <button mat-stroked-button type="button" (click)="close()">إلغاء</button>
   <button
