--- a/src/app/features/register/register.component.html
+++ b/src/app/features/register/register.component.html
@@ -68,7 +68,9 @@
       </form>
 
       <div id="footer">
-        <img class="w-50" src="assets/images/full-logo.png" alt="" />
+        <a href="/">
+          <img class="w-50" src="assets/images/full-logo.png" alt="" />
+        </a>
       </div>
     </div>
   </div>
